Tweaked project.clj for Java 9